@@ -1,3 +1,7 @@
+2021-12-27 Danilo Chang
+
+	* Implement command: QRCodeEncoder
+
 2021-11-09 Danilo Chang
 
 	* Bump version to v0.13
